--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+
     <aside>
         <a href="{% url 'adminv2:dashboard' %}">Dashboard</a>
         <a href="{% url 'adminv2:listing' %}">Listing</a>
@@ -18,6 +20,10 @@
     </main>
    
 </body>
+
+    
 <script src="{% static 'js/helper_func.js' %}"></script>
+<script src="{% static 'js/utils.js' %}"></script>
+
 {% block script %}{% endblock  %}
 </html>
