--- a/adminv2/templates/adminv2/listing/add.html
+++ b/adminv2/templates/adminv2/listing/add.html
@@ -122,76 +122,39 @@
 
         const stateField = document.querySelector('#id_state');
         const lgaField = document.querySelector('#id_lga');
-        stateField.addEventListener('change', async ()=>{
-            let state = stateField.value
-            // if (stateField.value == 'fct'){
-            //     state = state.toUpperCase()
-            // }
-            console.log(state)
-            let lgas = await fetchLGAs(state)
 
-            if(lgas){
-                lgaField.innerHTML = lgas.map(lga => 
-                    `<option value="${ (lga) }">${ lga }</option>`
-                ).join('');
-            }
+        //function to update Local Government Area based on the selected Nigerian Satate
+        async function updateLGAOptions(state){
+            const lgas = await fetchLGAs(state);
+            if(!lgas) return;
+
+            lgaField.innerHTML = lgas.map(lga => 
+                `<option value="${ (lga) }">${ lga }</option>` 
+            ).join('');
+        }
+
+        stateField.addEventListener('change', async ()=>{
+           await updateLGAOptions(stateField.value)
         }) 
 
-        // function getLGAs(element){
-        //     state = element.value
-        //     state = unslugify(state);
-        //     let lgas = fetchLGAs(state);
-        //     return lgas[1];
-        // }
-
-
-        async function fetchLGAs(state){
-            /* get the json file from the url
-                if successful return the an array of local govt area for the state
-                if not, throws errror*/
-
-            // if(!state) return []
-
-            try{
-                const response = await fetch( "{% url 'listing:get_states' %}" );
-                if(response.ok){
-                    const data = await response.json();
-                    console.log(data)
-                    const lgas = data[state];
-                    console.log(lgas)
-                    return lgas;
-                }
-                else{
-                    throw new Error("Failed to reach data");
-                }
-            } catch(error){
-                console.error('Error:', error);
-                return [];
-            }
-        }
+       
 
         let uploadFiles = []
 
         function handleFileUpload(event, component){
             let selectedFiles = event.target.files //get all files
             let newImages = [];
-            // let newFiles = [];
             
             for(i=0; i < selectedFiles.length; i++){
                 newImages.push(URL.createObjectURL(selectedFiles[i])); //for display
-                // newFiles.push(selectedFiles[i]) //for upload
                 uploadFiles.push(selectedFiles[i])
             }
 
             component.images = [...component.images, ...newImages]; //add new images while preserving the already stored images
-            // component.files = [...component.files, ...newFiles];
-            // console.log(component.files)
-            console.log(uploadFiles)
         }
 
         function removeImage(index, component){
             component.images.splice(index, 1)
-            // component.files.splice(index, 1)
             uploadFiles.splice(index, 1)
 
             if (component.images.length == 0){
@@ -200,49 +163,32 @@
             console.log(uploadFiles)
         }
 
-        function test(){
-            let form = document.querySelector('form');
-            formData = new FormData(form);
-
-            formData.delete('multiple_images[]');
-            
-            if(uploadFiles){
-                uploadFiles.forEach((file) => {
-                    formData.append('multiple_images[]', file)
-                });
-            }
-
-            console.log(...formData)
-
-            // for (let [key, value] of formData.entries()) {
-            //     console.log(key + ':', value); // Log each key-value pair
-            // }
-
-        }
-        function submitForm(event){
-            event.preventDefault()
-
-            let form = event.target;
-            // print(form)
+        function prepareFormData(form){
             formData = new FormData(form)
 
+            // Handling Multiple Image Field
             formData.delete('multiple_images[]')
-
             if(uploadFiles){
                 uploadFiles.forEach((file) => {
                     formData.append('multiple_images[]', file)
                 });
-                // return;
-
-                fetch(form.action, {
-                    method: 'POST',
-                    body: formData,
-                })
-                .then(response => response.json())
-                .then(data => console.log(data))
-                .catch(error => console.log('Upload failed', error));
             }
 
+            return formData;
+        }
+
+        function submitForm(event){
+            event.preventDefault()
+            let form = event.target;
+            formData = prepareFormData(form)
+
+            fetch(form.action, {
+                method: 'POST',
+                body: formData,
+            })
+            .then(response => response.json())
+            .then(data => console.log(data))
+            .catch(error => console.log('Upload failed', error));
         }
     </script>
 {% endblock %}
