--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -14,7 +14,7 @@
     {% block styleblock %} {% endblock %}
 
 </head>
-<body class='font-base text-gray-900'>
+<body class='font-base text-gray-900' x-data="{ openLoginModal: false }">
 
     <div></div>
     <header x-data="{ isOpen:false }" class="w-full bg-white border-gray-200 responsive-padding py-2.5 sticky top-0 z-30 drop-shadow-md">
@@ -59,7 +59,7 @@
                     <li><a href="{% url 'core:about' %}" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">About Us</a></li>
                     <li><a href="{% url 'core:contact' %}" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Contact</a></li>
                     <li>
-                        {% component "button" label="Sign Up/Login" type="primary" width="full" %} {% endcomponent %}
+                        {% component "button" label="Sign Up/Login" type="primary" width="full" attr="@click='openLoginModal = true'" %} {% endcomponent %}
                     </li>
                 </ul>
             </nav>
@@ -115,7 +115,93 @@
         </div>        
     </footer>
     
+
+    <template x-if="openLoginModal">
+        <div id="modal" class="fixed inset-0 flex items-center justify-center bg-gray-800/80 z-[1000000]">
+            <div x-data="{ isLogin:true }" class="bg-white rounded-lg w-full max-w-[400px] shadow-lg">
+                <div class="flex border-b py-2 px-4">
+                    <button @click="openLoginModal = false"class="items-end ml-auto mt-4 rounded-lg">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="18" y1="6" x2="6" y2="18"></line>
+                            <line x1="6" y1="6" x2="18" y2="18"></line>
+                        </svg>
+                    </button>
+                </div>
+
+                <div class="w-full flex gap-4 justify-center *:w-24 *:border-b *:border-2 *:border-gray-300 *:rounded-sm *:px-4 *:py-2">
+                    <button :class="!isLogin ? 'bg-gray-300' : 'bg-white'" @click="isLogin = false">Sign Up</button>
+                    <button :class="isLogin ? 'bg-gray-300' : 'bg-white'" @click="isLogin = true">Login</button>
+                </div>
+
+                <div class="overflow-y-auto max-h-[80vh]">
+
+                    <!-- Login Form -->
+                    <form method="POST" onsubmit="handleLogin(event)" class="p-4" x-show="isLogin" x-cloak>
+                        <div class="mb-6">
+                            <h2 class="text-xl font-bold">Login</h2>
+                            <div id="error-message" class="text-red-500 bg-pink-500 text-center font-medium hidden"></div>
+                        </div>
+                        
+                        <div class="flex flex-col gap-3 lg:gap-4">
+                            <div>
+                                <label class="label-primary" for="id_username">Email</label>
+                                <input class="input-primary" type="email" name="username" autofocus maxlength="254" required id="id_username" placeholder="Enter your email">
+                            </div>
+
+                            <div>
+                                <label class="label-primary" for="id_password">Password</label>
+                                <input class="input-primary" type="password" name="password" autocomplete="current-password" required id="id_password" placeholder="Enter your password">
+                            </div>
+
+                            {% component "button" html_tag="button" label="Login" type="primary" width="full" function="submit" %} {% endcomponent %}
+                        </div>
+                    </form>
+
+                    <!-- Signup Form (Separated from Login Form) -->
+                    <form method="POST" onsubmit="handleSignUp(event)" class="p-4" x-show="!isLogin" x-cloak class="p-4">
+                        <div class="mb-6">
+                            <h2 class="text-xl font-bold">Sign Up</h2>
+                            <div id="error-message" class="text-red-500 bg-pink-500 text-center font-medium hidden"></div>
+                        </div>
+
+                        <div class="flex flex-col gap-3 lg:gap-4">
+                            <div>
+                                <label for="id_first_name" class="label-primary">First Name</label>
+                                <input class="input-primary" type="text" name="first_name" maxlength="150" id="id_first_name">
+                            </div>
+                            <div>
+                                <label for="id_last_name" class="label-primary">Last Name</label>
+                                <input class="input-primary" type="text" name="last_name" maxlength="150" id="id_last_name">
+                            </div>
+                            <div>
+                                <label for="id_email" class="label-primary">Email</label>
+                                <input class="input-primary" type="email" name="email" maxlength="254" autofocus required id="id_email">
+                            </div>
+                            <div>
+                                <label for="id_password1" class="label-primary">Password</label>
+                                <input class="input-primary" type="password" name="password1" autocomplete="new-password" required aria-describedby="id_password1_helptext" id="id_password1">
+                            </div>
+                            <div>
+                                <label for="id_password2" class="label-primary">Confirm Password</p>
+                                <input class="input-primary" type="password" name="password2" autocomplete="new-password" required aria-describedby="id_password2_helptext" id="id_password2">
+                            </div>
+                    
+                            {% component "button" html_tag="button" label="Register" type="primary" width="full" function="submit" %} {% endcomponent %}
+                        </div>
+                    </form>
+
+                </div>
+                
+                
+            </div>
+        </div>
+    </template>
+
+    <!-- Modal (Initially Hidden) -->
+    
+
     <script src="{% static 'js/helper_func.js' %}"></script>
+    <script src="{% static 'js/utils.js' %}"></script>
     {% block script %}{% endblock %}
     
 </body>
