--- a/listing/templates/listing/details.html
+++ b/listing/templates/listing/details.html
@@ -72,7 +72,7 @@
                 </div>
 
                 <!-- Thumbnail -->
-                 <div class="flex justify-center gap-2 mt-4">
+                 <div class="flex self-start justify-center gap-2 mt-4">
                     <template x-for="(slide, index) in slides">
                         <img x-bind:src="slide.imgSrc" 
                                 x-bind:alt="slide.imgAlt"
