--- a/static/css/input.css
+++ b/static/css/input.css
@@ -5,6 +5,7 @@
 @source '../../**/templates/**/*.html';
 @source '../../components/**/*.html';
 @source '../../components/**/*.js';
+@source '../../static/js/**/*.js';
 
 
 
