--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Eaglespoint Horizon Limited {% endblock %}</title>
 
-    <script src="https://unpkg.com/alpinejs" defer></script>
+    {% comment %} <script src="https://unpkg.com/alpinejs" defer></script> {% endcomment %}
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     {% block styleblock %} {% endblock %}
