--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -23,7 +23,7 @@
         <div id="headerWrapper" class="relative flex  gap-6 items-center justify-center mx-auto">
             
             <!-- Logo Section -->
-            <a href="#" class="block" id="logo">
+            <a href="{% url 'core:home' %}" class="block" id="logo">
                 <img src="{% static 'images/eaglespoint-logo.png' %}" width="72px" class="w-18 md:w-32" alt="EaglesPoint Logo" />
             </a>
     
@@ -136,61 +136,16 @@
                 </div>
 
                 <div class="overflow-y-auto max-h-[80vh]">
-
-                    <!-- Login Form -->
-                    <form method="POST" onsubmit="handleLogin(event)" class="p-4" x-show="isLogin" x-cloak>
-                        <div class="mb-6">
-                            <h2 class="text-xl font-bold">Login</h2>
-                            <div id="error-message" class="text-red-500 bg-red-100 text-center text-sm p-2 w-max hidden"></div>
-                        </div>
-                        
-                        <div class="flex flex-col gap-3 lg:gap-4">
-                            <div>
-                                <label class="label-primary" for="id_username">Email</label>
-                                <input class="input-primary" type="email" name="username" maxlength="254" required id="id_username" placeholder="Enter your email">
-                            </div>
-
-                            <div>
-                                <label class="label-primary" for="id_password">Password</label>
-                                <input class="input-primary" type="password" name="password" autocomplete="current-password" required id="id_password" placeholder="Enter your password">
-                            </div>
-
-                            {% component "button" html_tag="button" label="Login" type="primary" width="full" function="submit" %} {% endcomponent %}
-                        </div>
-                    </form>
-
-                    <!-- Signup Form (Separated from Login Form) -->
-                    <form method="POST" onsubmit="handleSignUp(event)" class="p-4" x-show="!isLogin" x-cloak>
-                        <div class="mb-6">
-                            <h2 class="text-xl font-bold">Sign Up</h2>
-                            <div id="notification" class="text-center text-sm border-xlg p-2 mt-2 hidden"></div>
-                        </div>
-
-                        <div class="flex flex-col gap-3 lg:gap-4">
-                            <div>
-                                <label for="id_first_name" class="label-primary">First Name</label>
-                                <input class="input-primary" type="text" name="first_name" maxlength="150" id="id_first_name" required>
-                            </div>
-                            <div>
-                                <label for="id_last_name" class="label-primary">Last Name</label>
-                                <input class="input-primary" type="text" name="last_name" maxlength="150" id="id_last_name" required>
-                            </div>
-                            <div>
-                                <label for="id_email" class="label-primary">Email</label>
-                                <input class="input-primary" type="email" name="email" maxlength="254" required id="id_email">
-                            </div>
-                            <div>
-                                <label for="id_password1" class="label-primary">Password</label>
-                                <input class="input-primary" type="password" name="password1" autocomplete="new-password" required aria-describedby="id_password1_helptext" id="id_password1">
-                            </div>
-                            <div>
-                                <label for="id_password2" class="label-primary">Confirm Password</label>
-                                <input class="input-primary" type="password" name="password2" autocomplete="new-password" required aria-describedby="id_password2_helptext" id="id_password2">
-                            </div>
+                    <div x-show="isLogin" x-cloak>
+                        <!-- Login Form -->
+                        {% component "login_form" form_title="Login" form_class="p-4" show_signup_link=False autofocus=True is_js_submission=True %} {% endcomponent %}
+                    </div>
                     
-                            {% component "button" html_tag="button" label="Register" type="primary" width="full" function="submit" %} {% endcomponent %}
-                        </div>
-                    </form>
+                    <div x-show="!isLogin" x-cloak>
+                        <!-- Signup Form (Separated from Login Form) -->
+                        {% component "signup_form" form_title="Sign Up" form_class="p-4" show_login_link=False autofocus=True is_js_submission=True %} {% endcomponent %}
+                    </div>
+                    
 
                 </div>
                 
