--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -24,31 +24,7 @@
 
 {% block content %}
     <main class="responsive-padding flex flex-col mt-9 justify-center items-center">
-        <form method="POST" action="" onsubmit="handleLogin(event)" class="w-full lg:max-w-[400px] shadow-xl ring-2 ring-gray-900/5 px-6 pt-10 pb-8 ">
-            {% csrf_token %}
-
-            <div class="mb-6">
-                <h1 class="text-4xl font-bold mb-1.5">Login</h1>
-                <p>New user? <a class="text-blue-700 underline" href="{% url 'user:register'%}">Sign up</a> </p>
-                <div id="error-message" class="text-red-500 bg-red-100 text-center text-sm p-2 w-max hidden"></div>
-            </div>
-
-            <div class="flex flex-col gap-3 lg:gap-4">
-                <div>
-                    <label class="label-primary" for="id_username">Email:</label>
-                    <input class="input-primary" type="email" name="username" autofocus maxlength="254" required id="id_username">
-                </div>
-        
-                <div>
-                    <label class="label-primary" for="id_password">Password:</label>
-                    <input class="input-primary" type="password" name="password" autocomplete="current-password" required id="id_password">
-                </div>
-                
-                {% component "button" html_tag="button" label="Login" type="primary" width="full" function="submit" %} {% endcomponent %}
-            </div>
-    
-
-        </form>
+        {% component "login_form" form_title="Login" form_class="w-full lg:max-w-[400px] shadow-xl ring-2 ring-gray-900/5 px-6 pt-10 pb-8" show_signup_link=True autofocus=True is_js_submission=True %} {% endcomponent %}
     </main>
   
 {% endblock  %}
