--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -21,7 +21,9 @@
 {% block content %}
 
     <main class="responsive-padding flex flex-col mt-9 justify-center items-center">
-        <form method="POST" action="" class="w-full lg:max-w-[400px] shadow-xl ring-2 ring-gray-900/5 px-6 pt-10 pb-8 ">
+        {% component "signup_form" form_title="Sign Up" form_class="w-full lg:max-w-[400px] shadow-xl ring-2 ring-gray-900/5 px-6 pt-10 pb-8" show_login_link=True autofocus=True is_js_submission=False %} {% endcomponent %}
+        
+        {% comment %} <form method="POST" action="" class="w-full lg:max-w-[400px] shadow-xl ring-2 ring-gray-900/5 px-6 pt-10 pb-8 ">
             {% csrf_token %}
     
             <!-- Show Non-Field Errors -->
@@ -69,7 +71,7 @@
             </div>
     
             
-        </form>
+        </form> {% endcomment %}
     </main>
     
 
