--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -39,30 +39,60 @@
                 text-gray-500 rounded-lg ml-auto lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
                 <span class="sr-only">Open main menu</span>
                 <!-- <i class="fa fa-hamburger w-6 h-6" :class="isOpen ? 'fa-close' : 'fa fa-hamburger'"></i> -->
-                <template x-if="!isOpen">
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-                    </svg>
-                </template>
-                <template x-if="isOpen">
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
-                        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-                    </svg>
-                </template>
+                 <!-- Hamburger Icon (Visible by Default) -->
+                <svg x-show="!isOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+                </svg>
+
+                <!-- Close Icon -->
+                <svg x-show="isOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                </svg>
             </button>
     
             <!-- Navigation Menu -->
-            <nav x-cloak :class="isOpen ? 'flex' : 'hidden lg:block'" class="absolute p-2 lg:p-0 w-screen top-full z-50 bg-white lg:relative lg:top-0 flex-col justify-between items-start md:w-full lg:ml-auto lg:w-max lg:flex lg:items-center *:font-semibold lg:font-normal" id="mobile-menu">
-                <ul class="flex flex-col lg:items-center mt-4 font-medium w-full px-3 lg:px-0 md:w-full lg:w-max lg:flex-row lg:space-x-8 lg:mt-0">
-                    <li><a href="{% url 'core:home' %}" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Home</a></li>
-                    <li><a href="{% url 'core:real_estate' %}" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Real Estate</a></li>
-                    <li><a href="{% url 'core:home' %}" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Travel</a></li>
-                    <li><a href="#" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Blogs</a></li>
-                    <li><a href="{% url 'core:about' %}" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">About Us</a></li>
-                    <li><a href="{% url 'core:contact' %}" class="block text-gray-700 pl-2 py-2 lg:p-0 hover:bg-gray-100 lg:hover:bg-transparent lg:hover:underline">Contact</a></li>
-                    <li>
-                        {% component "button" label="Sign Up/Login" type="primary" width="full" attr="@click='openLoginModal = true'" %} {% endcomponent %}
+            <nav x-cloak :class="isOpen ? 'flex' : 'hidden lg:block'" class="absolute p-2 lg:p-0 w-screen top-full z-50 bg-white lg:relative lg:top-0 flex-col justify-between items-start md:w-full lg:ml-auto lg:w-max lg:flex lg:items-center" id="mobile-menu">
+                <ul class="flex flex-col lg:items-center mt-4 w-full px-3 lg:px-0 md:w-full lg:w-max lg:flex-row lg:space-x-8 lg:mt-0 *:block *:text-gray-700 *:pl-2 *:py-2 *:lg:p-0 *:hover:bg-gray-100 *:lg:hover:bg-transparent *:lg:hover:underline">
+                    <li><a href="{% url 'core:home' %}">Home</a></li>
+                    <li><a href="{% url 'core:real_estate' %}">Real Estate</a></li>
+                    <li><a href="{% url 'core:home' %}">Travel</a></li>
+                    <li><a href="#">Blogs</a></li>
+                    <li><a href="{% url 'core:about' %}">About Us</a></li>
+                    <li><a href="{% url 'core:contact' %}">Contact</a></li>
+
+                    {% if request.user.is_authenticated %}
+                    <li x-data="{ open: false }" @click.away="open = false" class="lg:relative cursor-pointer">
+                        <!-- Trigger (User Icon) -->
+                         <div class="flex gap-1" @click="open = !open">
+                            {% if user.profileImage %}
+                                <img src="{{user.profileImage.url}}" alt="{{user.firstname}}" width="24px" class="rounded-full">
+                            {% else %}
+                                <img src="{% static 'images/default-user.svg' %}" width="24px">
+                            {% endif %}
+                            <span>Profile</span>
+                        </div>
+                        
+                    
+                        <!-- Dropdown Menu -->
+                        <ul x-show="open" x-transition 
+                            class="lg:absolute right-0 mt-2 w-full lg:w-32 bg-white border border-gray-300 rounded-md shadow-lg">
+                            <li class="px-4 py-2 hover:bg-gray-100"><a href="#" class="w-full">Settings</a></li>
+                            <li>
+                                <form method="POST" action="{% url 'user:logout' %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="text-red-500 text-left px-4 py-2 w-full hover:bg-gray-100">Logout</button>
+                                </form>
+                            </li>
+                            
+                            <!-- <li class=""><a href="#">Logout</a></li> -->
+                        </ul>
                     </li>
+                    {% else %}
+                        <li>
+                            {% component "button" label="Sign Up/Login" type="primary" width="full" attr="@click='openLoginModal = true'" %} {% endcomponent %}
+                        </li>
+                    {% endif %}
+                    
                 </ul>
             </nav>
         </div>
